style.css
@font-face {
  font-family: pokemon;
  src: url(PokeSolid.ttf);
}

.container {
  user-select: none;
  font-family: pokemon;
  letter-spacing: 5px;
  margin: 0 auto;
  max-width: 800px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.twoColumns {
  display: flex;
  flex-direction: row;
}

.columnOne {
  display: flex;
  flex-direction: column;
  padding-right: 10px;
}

.columnTwo {
}

.label {
  font-family: Arial, Helvetica, sans-serif;
  letter-spacing: 5px;
  margin: 0 auto 0 0;
  max-width: 800px;
  padding-top: 5px;
  padding-bottom: 5px;
  display: flex;
  flex-direction: row-reverse;
}

button {
  font-style: bold;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

#game {
  display: grid;
  grid-template-columns: repeat(4, 120px);
  grid-template-rows: repeat(4, 120px);
  grid-gap: 10px;
}

.card {
  box-shadow: 0 3px 10px rgba(200, 200, 200, 0.9);
  border-radius: 10px;
  position: relative;
  overflow: hidden;
  transform-style: preserve-3d;
}

.front,
.back {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 12px;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  backface-visibility: hidden;
  transition: transform 0.5s;
}

.front {
  background-image: url("/pokeball.png");
  background-position: center;
  background-repeat: no-repeat;
  background-color: black;
}

.rotated {
  transform: rotateY(180deg);
}

button {
  font-size: 18px;
  background-color: #c62828;
  color: white;
  border-radius: 5px;
  border: none;
  padding: 10px 20px;
  cursor: pointer;
}

.flex {
  display: flex;
}

.poketext {
  color: #fdc903;
  font-size: 3em;
  text-shadow: 0 0 10px #3758aa, 0 0 10px #3758aa, 0 0 10px #3758aa,
    0 0 10px #3758aa, 0 0 10px #3758aa, 0 0 10px #3758aa;
  padding: 0px;
  margin: 0px;
  /* text-shadow: 5px 0 #3758aa, -5px 0 #3758aa, 0 5px #3758aa, 0 -5px #3758aa,
    3px 3px #3758aa, -3px -3px #3758aa, 3px -3px #3758aa, -3px 3px #3758aa; */
}

.alert {
  padding: 20px;
  margin-bottom: 10px;
  background-color: #2eb886;
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  letter-spacing: normal;
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -200px;
  z-index: 2;
}

.hidden {
  display: none;
}

